--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.2",
     "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-dialog": "^1.0.4",
