--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-PASSWORD=pscale_pw_dVFQIQUZUwBTrgNIAAIscnGtYytCXkCFAA5ifeDGp3e
+DATABASE_URL='mysql://af2yduewjrngd3fcsi4m:pscale_pw_dVFQIQUZUwBTrgNIAAIscnGtYytCXkCFAA5ifeDGp3e@aws.connect.psdb.cloud/poker-tracker?sslaccept=strict'
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2ltcGxlLWFudGVsb3BlLTQ0LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_KEjvOhuuRVSRuwoG1gubb8Vo6E5pQ1xcBxUjvC9DxU
