--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -51,6 +52,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "prisma": "^5.1.1"
   }
 }
